# modelz-llm

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  build.envd  client.py  main.py  mosec_service.py  pyproject.toml  requirements-cpu.txt  requirements.txt
.github/workflows/: docker-publish.yml  gcr.yml  python-publish.yml  python.yml
images/base/: Dockerfile
images/bloomz-560m/: Dockerfile
images/chatglm-6b/: Dockerfile
images/chatglm-6b-int4/: Dockerfile
images/fastchat-t5-3b/: Dockerfile
images/llama-2-7b/: Dockerfile
images/llama-7b/: Dockerfile  requirements.txt
images/vicuna-7b/: Dockerfile  requirements.txt
src/modelz_llm/: cli.py  emb.py  falcon_service.py  log.py  model.py  uds.py  utils.py
