[project]
name = "modelz-llm"
dynamic = ["version"]
description = "LLM unified service"
authors = [{ name = "TensorChord", email = "modelz@tensorchord.ai" }]
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "llmspec>=0.3.3",
    "falcon>=3",
    "uvicorn>=0.22",
    "mosec>0.6",
]
[project.optional-dependencies]
cpu = [
    # only include torch CPU for Linux x86_64
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp39-cp39-linux_x86_64.whl ; python_version == '3.9'",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp310-cp310-linux_x86_64.whl ; python_version == '3.10'",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp311-cp311-linux_x86_64.whl ; python_version == '3.11'",
    "transformers",
    "sentencepiece",
    "accelerate",
]
gpu = [
    "torch",  # CUDA 11.7, ref https://pytorch.org/get-started/locally/
    "transformers",
    "sentencepiece",
    "accelerate",
    "cpm_kernels",
]
[project.urls]
"Homepage" = "https://github.com/tensorchord/modelz-llm"
[project.scripts]
modelz-llm = "modelz_llm.cli:main"

[build-system]
requires = ["setuptools", "setuptools_scm>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/modelz_llm/_version.py"

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "B", "I", "SIM", "TID", "PL"]

[tool.black]
line-length = 88
